# garden_of_coloured_lights

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
data/: Makefile.am  init.txt
docs/: garden.doxyfile.in
pkgs/archlinux/: PKGBUILD
pkgs/w32/: winstaller.nsi  winstaller.nsi.in
resources/: Makefile.am  garden.desktop
src/: cloud.c  cloud.h  config.h  configure.h.in  data.h  display.c  display.h  display_init.c  display_init.h  displayinit.c  displayinit.h  ebullet.c  ebullet.h  eclass.c  enemy.c  enemy.h  game.c  game.h  garden.rc  getoptc.c  globvars.h  gplize.sh  input.c  input.h  level.c  level.h  level.h.h  main.c  menu.c  menu.h  palette.c  palette.h  pbullet.c  pbullet.h  sound.c  sound.h  stuff.c  stuff.h  system.h
web/: index.html  index.html~
