gardendir=@DATADIR_NAME@
nobase_dist_garden_DATA = init.txt

# wavsdir=$(gardendir)/wavs
nobase_dist_garden_DATA += wavs/bang2.wav wavs/cannon.wav wavs/level.wav wavs/mouth.wav wavs/rect.wav wavs/whoosh.wav wavs/bang.wav wavs/extra.wav wavs/lwbeam.wav wavs/p_bang.wav wavs/scatter.wav wavs/worms.wav wavs/blop.wav wavs/fire.wav wavs/mgun.wav wavs/rect2.wav wavs/swbeam.wav

# beatdir=$(gardendir)/beat
nobase_dist_garden_DATA += beat/arp.wav beat/drum3.wav beat/funny.wav beat/multi2.wav beat/spinner.wav beat/thing4.wav beat/beam.wav beat/drum4.wav beat/light.wav beat/multi.wav beat/square.wav beat/voice.wav beat/blip.wav beat/flute2_l.wav beat/line1.wav beat/nice2.wav beat/stage4.wav beat/walker.wav beat/cymbal1.wav beat/flute2_s.wav beat/line2.wav beat/nice.wav beat/string.wav beat/xline.wav beat/dline.wav beat/flute_l.wav beat/line3.wav beat/pan.wav beat/sweet2.wav beat/drum1.wav beat/flute.wav beat/long2.wav beat/piano.wav beat/sweet.wav beat/drum2.wav beat/food.wav beat/long.wav beat/saw.wav beat/synth.wav

# gfxdir=$(gardendir)/gfx
nobase_dist_garden_DATA += gfx/garden.dat gfx/multi.bmp gfx/small.bmp gfx/trans.bmp gfx/large.bmp gfx/platform.bmp gfx/splash.bmp
